SubVersion: $Id$

- 03/09/2007, version 3.01a:
	- re-released due to missing file in Windows Installer (dhahelper.sys)
	- includes latest ticables2 library with USB polling support
	- [kevin] $2642: fixed bit toggling in register window
	        => released on 04/09/2007
	
- 20/06/2007, version 3.01:
	$2556: Merged changes from tiemu-3-sound branch:
	- [hypersonic] $2509-2513: implemented low-level SDL code for sound emulation
	- [kevin] $2515: added configure checks for SDL and --disable-sound configure option
	- [kevin] $2520: added "Emulate sound" checkbox to the popup menu
	- [kevin] $2527: cleaned up time handling (using gettimeofday everywhere, Win32 implementation taken from kdewin32,
	                 not incorrectly attempting to measure wall clock time with clock() anymore)
	- [kevin] $2531: filter out yet another junk parameter (LIBS=...) passed to subdir configure from yet another autoconf
	                 version upgrade (2.61) (fixes MinGW build with regenerated configure)
	- [kevin] $2537: implemented sound emulation in the CPU emulation loop
	- [kevin] $2538: only define _GNU_SOURCE in src/core/uae/sysdeps.h if not already defined
	Note: trunk forked into tiemu-3-sound branch at rev. $2507
	- [roms]  $2571: changed some function names (sound emulation) to follow TiEmu function naming scheme
	- [roms]  $2572: changed one function in dbus.c to follow ticonv API changes. Major number requirements updated consequently.
	- [roms]  $2591: speed-up displaying of code window by populating ROM calls early
	- [kevin] $2596: fixed coordinate saving for Win32 multi-monitor case
	- [kevin] $2598: fixed KDE path detection for multilib systems with both 32-bit and 64-bit libraries installed
	- [roms]  $2600: clear _all_ bkpts in ti68k_bkpt_clear_all
	- [roms]  $2601: added support for breakpoints on bit changes
	- [roms]  $2602: data/bit change breakpoint is raised after instruction execution so fixed disassembly window 
		to show one line before current PC.