@@ -1,5 +1,12 @@
 SubVersion: $Id$
 
+- 16/09/2007, version 3.02:
+	- [roms] $2646: screenshots can be copied into the clipboard
+
+- 07/09/2007, version 3.01b:
+  - re-released due to missing USB drivers (libusb0.dll)
+  				=> released on 07/09/2007
+
 - 03/09/2007, version 3.01a:
 	- re-released due to missing file in Windows Installer (dhahelper.sys)
 	- includes latest ticables2 library with USB polling support
